# Junior-Data-Scientist

./: .gitattributes  .gitignore  README.md  requirements.txt
carms-data-platform-demo/: .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
carms-data-platform-demo/dashboard/: app.py
carms-data-platform-demo/src/: config.py
carms-data-platform-demo/src/api/: deps.py  main.py  schemas.py
carms-data-platform-demo/src/api/routers/: disciplines.py  programs.py  qa.py  schools.py  sites.py  streams.py
carms-data-platform-demo/src/db/: init_db.py  models.py  session.py
carms-data-platform-demo/src/etl/: dagster_defs.py  extract_zip.py  load_disciplines_from_excel.py  load_program_documents_from_csv.py  load_programs_from_excel.py
carms-data-platform-demo/src/qa/: embeddings.py  qa_chain.py
data/extracted/: explore_documents.py  visual_desc.py
data/raw/: visual_xlsxs.py
docs/: api-endpoints.md  aws-architecture.md
